# ctmslib

./: .gitignore
clibrary/: clibrary.csproj  directory.build.props
clibrary/src/: DataOperations.cs
python/: pkg_build.py  pyproject.toml
python/test/: config.py  test.py
